feat(table): reusable table component for secrets/hooks/etc (#150)
* adding table component in Table.elm

* adding table style

* fixing scss

* using shared style on Hooks table

* lint

* css lint

* css lint

* prettier fix

* removing unused css

* removing unused css

* lint

Co-authored-by: David May <1301201+wass3r@users.noreply.github.com>

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -943,7 +943,7 @@ nav {
   border: 1px solid var(--color-red);
 }
 
-.hooks {
+.table {
   width: 100%;
   margin: 1rem 0;
   padding-bottom: 0.5rem;
@@ -953,36 +953,51 @@ nav {
   background: var(--color-bg-dark);
 }
 
-.hooks .loading {
+.table-label {
+  font-size: 1.25rem;
+  color: var(--color-primary);
+  padding-top: 0.6rem 0 0 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.table .loading {
   display: flex;
 
   margin-top: 0.5em;
   margin-left: 0.4em;
 }
 
-.hooks .row.preview {
+.table .row.preview {
   display: flex;
   flex-direction: row;
   align-items: center;
+  // border-bottom: 1px solid var(--color-primary);
 }
 
-.hooks .headers {
+.table .headers {
   display: flex;
   flex-direction: row;
   align-items: center;
 
   margin-top: 0.3em;
   padding: 0.3em 1rem;
+  padding-left: 2rem;
 
   border-bottom: 1px solid var(--color-bg-light);
 }
 
-.hooks .header {
+.table .header {
   flex: 1;
 
   font-size: 1.2rem;
 
   text-align: center;
+}
+
+.hooks.table .headers {
+  padding-left: 4.25rem;
 }
 
 .hook-status {
@@ -997,35 +1012,61 @@ nav {
   stroke: var(--color-red);
 }
 
-.hooks .row .cell {
+.table .row .cell {
   flex: 1;
   align-items: center;
   justify-content: center;
 
   font-weight: 300;
-
+  width: 300px;
+  word-wrap: break-word;
   text-align: center;
 }
 
-.hooks .source-id {
+.table .headers .header.-last {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 1rem;
+}
+
+.table .cell.-last {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 1rem;
+
+  button {
+    margin: 0.25rem 0;
+  }
+}
+
+.table .source-id {
   min-width: 330px;
 }
 
-.hooks .first-cell {
-  width: 44px;
+.table .headers .first-cell {
+  width: 2rem;
 }
 
-.hooks .headers .first-cell {
-  width: calc(2rem + 44px);
+.secret {
+  margin: 1rem;
 }
 
-.hooks .cell.source-id {
+.filler-cell {
+  width: 6ch;
+}
+
+.table .headers .-label {
+  font-size: 1.5rem;
+  color: var(--color-primary);
+}
+
+.table .cell.source-id {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
-.hooks .text {
+.table .text {
   flex: 1;
   padding: 3px 12px;
 
@@ -1034,7 +1075,7 @@ nav {
   background: var(--color-bg);
 }
 
-.hooks .details {
+.table .details {
   margin: 1rem;
 }
 
@@ -1046,7 +1087,7 @@ nav {
   color: var(--color-red-light);
 }
 
-.hooks .info {
+.table .info {
   display: flex;
   display: inline-block;
   flex-direction: row;
@@ -1060,50 +1101,50 @@ nav {
   border-left: 2px solid var(--color-bg-light);
 }
 
-.hooks .info:last-child {
+.table .info:last-child {
   border-bottom: none;
 }
 
-.hooks .info.-pending {
+.table .info.-pending {
   border-left-color: var(--color-bg-light);
 }
 
-.hooks .info.-running {
+.table .info.-running {
   border-left-color: var(--color-yellow);
 }
 
-.hooks .info.-success {
+.table .info.-success {
   border-left-color: var(--color-green);
 }
 
-.hooks .info.-failure,
-.hooks .info.-error {
+.table .info.-failure,
+.table .info.-error {
   border-left-color: var(--color-red);
 }
 
-.hooks .element span.-m-r,
+.table .element span.-m-r,
 .hook-build .-m-r {
   margin-right: 0.4em;
 }
 
-.hooks .error-label {
+.table .error-label {
   color: var(--color-red-light);
 }
 
-.hooks .hook-build-status.-pending {
+.table .hook-build-status.-pending {
   color: var(--color-offwhite);
 }
 
-.hooks .hook-build-status.-running {
+.table .hook-build-status.-running {
   color: var(--color-yellow);
 }
 
-.hooks .hook-build-status.-success {
+.table .hook-build-status.-success {
   color: var(--color-green);
 }
 
-.hooks .hook-build-status.-failure,
-.hooks .hook-build-status.-error {
+.table .hook-build-status.-failure,
+.table .hook-build-status.-error {
   color: var(--color-red-light);
 }
 
