--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1370,6 +1370,7 @@ nav {
 
 .secret-form {
   margin-bottom: 0.5rem;
+  padding-top: 1rem;
 }
 
 .secret-form section {
@@ -1457,8 +1458,7 @@ nav {
 }
 
 .secret-form .help {
-  padding: 1rem;
-  padding-top: 0;
+  padding-bottom: 1rem;
 }
 
 .secret-form .form-action {
