--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -72,6 +72,14 @@
       max-width: 100%;
     }
   }
+
+  &.-stack {
+    flex-flow: row wrap;
+  }
+
+  .form-label {
+    flex: 1 0 100%;
+  }
 }
 
 // radio & checkbox
@@ -176,8 +184,6 @@
 }
 
 .form-control input:disabled:not([type='checkbox']):not([type='radio']) {
-  color: var(--color-bg-light);
-
   border-color: var(--color-bg-light);
 
   // stylelint-disable-next-line
@@ -203,6 +209,7 @@
 //   <div class="form-control">..</div>
 //   <button class="button">..</button>
 // </div>
+
 .form-controls {
   display: flex;
   justify-content: space-between;
@@ -220,6 +227,16 @@
 
     .form-control:not(:last-child) {
       margin-bottom: 0.5rem;
+    }
+  }
+
+  // .-row is for horizontally stacking controls
+  &.-row {
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+
+    .form-control:not(:last-child) {
+      margin-right: 0.5rem;
     }
   }
 
