--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -42,11 +42,42 @@
   --line-width: 2px;
 
   // system font stack
-  --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-    'Segoe UI Symbol';
+  --font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
   // system mono-spaced font stack
-  --font-code: Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New',
-    monospace;
+  --font-code: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+
+  // primary colors
+  --base00: #1e1d1d;
+  --base01: #2a2929;
+  --base02: #3d3c3c;
+  --base03: #504b4b;
+  --base04: #868585;
+  --base05: #e6e7e8;
+  --base06: #f5f5f5;
+  --base07: #ecf0f1; /* light grey (pending) */
+  --base08: #e74c3c; /* red */
+  --base09: #e67e22; /* orange */
+  --base0A: #f1c40f; /* yellow */
+  --base0B: #2ecc71; /* green */
+  --base0C: #1abc9c; /* cyan */
+  --base0D: #3498db; /* blue */
+  --base0E: #9b59b6; /* purple */
+  --base0F: #8f4b2d; /* brown */
+  --base0G: #3d4a58; /* 17 color palettes are 1 better than 16 */
+
+  --white: #fff;
+  --amber-primary: #f5a623;
+  --amber-secondary: #d58808;
+  --blue-primary: #4a90e2;
+  --blue-secondary: #2d76cc;
+  --brown-primary: #8b572a;
+  --brown-secondary: #6a401c;
+  --grey-primary: #9b9b9b;
+  --grey-secondary: #7a7373;
+  --green-primary: #11c560;
+  --green-secondary: #419867;
+  --red-primary: #ed4b35;
+  --red-secondary: #bd3826;
 }
