--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,21 +5,22 @@
 // Use of this source code is governed by the LICENSE file in this repository.
 
 // base
-@import 'variables';
-@import 'reset';
+@import "variables";
+@import "reset";
+@import "ansi";
 
 // utilities
-@import 'mixins';
-@import 'animations';
+@import "mixins";
+@import "animations";
 
 // elements
-@import 'buttons';
-@import 'forms';
-@import 'details';
+@import "buttons";
+@import "forms";
+@import "details";
 
 // pages
-@import 'settings';
+@import "settings";
 
 // general
-@import 'main';
-@import 'themes';
+@import "main";
+@import "themes";
