--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -797,16 +797,6 @@ nav {
   user-select: none;
 
   width: 6ch;
-
-  > span {
-    position: absolute;
-    top: 0.2rem;
-    right: 0.1rem;
-    width: 5ch;
-    text-align: right;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
 }
 
 .logs .wrapper.-focus {
@@ -823,9 +813,14 @@ nav {
 }
 
 .log-content {
-  min-height: 18px;
+  display: flex;
+  // min-height: 20px;
 }
 
+.log-button button:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
 .no-logs {
   margin-left: 1.5em;
 }
