--- a/src/scss/_ansi.scss
+++ b/src/scss/_ansi.scss
@@ -22,7 +22,7 @@
     color: var(--color-coal-light);
 }
 .ansi-red-fg {
-    color: var(--color-red);
+    color: var(--color-red-light);
 }
 .ansi-green-fg {
     color: var(--color-green);
@@ -48,7 +48,7 @@
     font-weight: bold;
 }
 .ansi-bright-red-fg {
-    color: var(--color-red);
+    color: var(--color-red-light);
     font-weight: bold;
 }
 .ansi-bright-green-fg {
@@ -80,7 +80,7 @@
     background-color: var(--color-coal-light);
 }
 .ansi-red-bg {
-    background-color: var(--color-red);
+    background-color: var(--color-red-light);
 }
 .ansi-green-bg {
     background-color: var(--color-green);
@@ -106,7 +106,7 @@
     font-weight: bold;
 }
 .ansi-bright-red-bg {
-    background-color: var(--color-red);
+    background-color: var(--color-red-light);
     font-weight: bold;
 }
 .ansi-bright-green-bg {
