--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -774,6 +774,11 @@ nav {
   font-size: 14px;
 }
 
+.log-table {
+  table-layout: fixed;
+  width: 100%;
+}
+
 .logs .line {
   display: flex;
   align-items: flex-start;
@@ -804,19 +809,9 @@ nav {
   user-select: none;
 
   width: 6ch;
-
-  > span {
-    position: absolute;
-    top: 0.2rem;
-    right: 0.1rem;
-    width: 5ch;
-    text-align: right;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
 }
 
-.logs .wrapper.-focus {
+.logs .-focus {
   background: var(--color-focus);
 }
 
@@ -1489,4 +1484,12 @@ nav {
 // visually hide, but keep accessible by screen readers
 .visually-hidden {
   @include visually-hidden();
+}
+
+.-word-break-all {
+  word-break: break-all;
+}
+
+.-overflow-auto {
+  overflow: auto;
 }
