--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -412,7 +412,6 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
   padding: 0 24px;
 }
 
@@ -441,6 +440,18 @@ nav {
 
 .git-info .sender {
   margin: 0 8px 0 8px;
+}
+
+
+.row .message {
+  font-size: 16px;
+  font-weight: 700;
+
+  width: 60%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  
 }
 
 .time-info {
