--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -8,7 +8,6 @@
     margin-bottom: 1rem;
     padding: 0;
 
-    table-layout: fixed;
     background-color: var(--color-bg-dark);
     border-collapse: collapse;
 }
@@ -18,7 +17,9 @@
 }
 
 .table-base tr .-icon {
-    width: 50px;
+    width: 3rem;
+
+    padding-left: 1.25rem;
 }
 
 .table-base tr {
@@ -61,6 +62,10 @@
     word-wrap: break-word;
 }
 
+.table-base .-line-no-break {
+    white-space: nowrap;
+}
+
 .table-base .source-id {
     background-color: var(--color-bg);
     padding: 0.2rem 1rem;
@@ -101,6 +106,8 @@
 
     .table-base tr .-icon {
         width: inherit;
+
+        padding-left: 0.6rem;
     }
 
     .table-base td {
