--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -40,13 +40,13 @@ header {
   justify-content: space-between;
 
   padding: 1em var(--horizontal-pad);
-  
+
   background: radial-gradient(
     circle at 50% -200%,
     var(--color-bg-light) -7%,
     transparent 50%
   );
-  
+
   border-top-width: 0;
   border-bottom: var(--line-width) solid;
   border-left-width: 0;
@@ -489,11 +489,13 @@ nav {
 }
 
 .build-animation.-bottom.-running {
-  animation: build-status-parallax-running 26s linear 26s infinite, build-status-parallax-start 26s linear none;
+  animation: build-status-parallax-running 26s linear 26s infinite,
+    build-status-parallax-start 26s linear none;
 }
 
 .build-animation.-top.-running {
-  animation: build-status-parallax-running 22s linear 22s infinite, build-status-parallax-start 22s linear none;
+  animation: build-status-parallax-running 22s linear 22s infinite,
+    build-status-parallax-start 22s linear none;
 }
 
 .build-animation.-bottom.-start {
