fix(secrets): adding responsive table to secrets (#179)
* initial pass. converted html to <table> etc

* first pass at table design with mobile friendly css

* in progress

* back in running state

* moved table style, merged with master

* lint

* removing padding from add repo secret btn

* improvements to style, prev/next pager, lint, needs word break

* render list cell as single element

* adding test label to table

* fixing cypress test attributes

* fixing cypress click a

* updating comments

* lint

* remove table-layout fixed

* removing line break from header columns

* removed unused if/else

* improve word wrap classes

* fixing overflow-auto class

* reverting annoying auto lint

* removing annoying auto lint

* removing annoying auto lint

* revert css lint

Co-authored-by: David May <1301201+wass3r@users.noreply.github.com>

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -939,200 +939,6 @@ nav {
   border: 1px solid var(--color-red);
 }
 
-.table {
-  width: 100%;
-  margin: 1rem 0;
-  padding-bottom: 0.5rem;
-
-  font-size: 1rem;
-
-  background: var(--color-bg-dark);
-}
-
-.table .loading {
-  display: flex;
-
-  margin-top: 0.5em;
-  margin-left: 0.4em;
-}
-
-.table .row.preview {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  // border-bottom: 1px solid var(--color-primary);
-}
-
-.table .headers {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  margin-top: 0.3em;
-  padding: 0.3em 1rem;
-  padding-left: 1rem;
-
-  border-bottom: 1px solid var(--color-bg-light);
-
-  position: relative;
-}
-
-.table .header {
-  flex: 1;
-
-  font-size: 1.2rem;
-
-  text-align: center;
-}
-
-.hooks.table .headers {
-  padding-left: 4.25rem;
-}
-
-.hook-status {
-  fill: none;
-}
-
-.hook-status.-success {
-  stroke: var(--color-green);
-}
-
-.hook-status.-failure {
-  stroke: var(--color-red);
-}
-
-.table .row .cell {
-  flex: 1;
-  align-items: center;
-  justify-content: center;
-
-  font-weight: 300;
-  width: 300px;
-  word-wrap: break-word;
-  text-align: center;
-}
-
-.table .headers .header.-last {
-  display: flex;
-  justify-content: flex-end;
-  padding-right: 1rem;
-}
-
-.table .cell.-last {
-  display: flex;
-  justify-content: flex-end;
-  padding-right: 1rem;
-
-  button {
-    margin: 0.25rem 0;
-  }
-}
-
-.table .source-id {
-  min-width: 330px;
-}
-
-.table .headers .first-cell {
-  width: 2rem;
-}
-
-.filler-cell {
-  width: 6ch;
-}
-
-.table .headers .-label {
-  font-size: 1.5rem;
-  color: var(--color-primary);
-}
-
-.table .cell.source-id {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.table .text {
-  flex: 1;
-  padding: 3px 12px;
-
-  text-align: center;
-
-  background: var(--color-bg);
-}
-
-.table .details {
-  margin: 1rem;
-}
-
-.preview .status.success {
-  color: var(--color-green);
-}
-
-.preview .status.failure {
-  color: var(--color-red-light);
-}
-
-.table .info {
-  display: flex;
-  display: inline-block;
-  flex-direction: row;
-
-  width: 100%;
-  padding: 0.4em 1em;
-
-  font-size: 14px;
-
-  border-bottom: 1px solid var(--color-bg-light);
-  border-left: 2px solid var(--color-bg-light);
-}
-
-.table .info:last-child {
-  border-bottom: none;
-}
-
-.table .info.-pending {
-  border-left-color: var(--color-bg-light);
-}
-
-.table .info.-running {
-  border-left-color: var(--color-yellow);
-}
-
-.table .info.-success {
-  border-left-color: var(--color-green);
-}
-
-.table .info.-failure,
-.table .info.-error {
-  border-left-color: var(--color-red);
-}
-
-.table .element span.-m-r,
-.hook-build .-m-r {
-  margin-right: 0.4em;
-}
-
-.table .error-label {
-  color: var(--color-red-light);
-}
-
-.table .hook-build-status.-pending {
-  color: var(--color-offwhite);
-}
-
-.table .hook-build-status.-running {
-  color: var(--color-yellow);
-}
-
-.table .hook-build-status.-success {
-  color: var(--color-green);
-}
-
-.table .hook-build-status.-failure,
-.table .hook-build-status.-error {
-  color: var(--color-red-light);
-}
-
 .-icon {
   fill: none;
   stroke: var(--color-primary);
@@ -1456,19 +1262,6 @@ nav {
   padding-left: 1rem;
 }
 
-.table-label {
-  font-size: 1.25rem;
-  color: var(--color-primary);
-  padding: 0.6rem 0 0 1rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.table-label .add-secret {
-  margin-right: 1em;
-}
-
 .field-description {
   font-size: 1rem;
   font-weight: 300;
@@ -1486,10 +1279,14 @@ nav {
   @include visually-hidden();
 }
 
-.-word-break-all {
+.break-all {
   word-break: break-all;
 }
 
-.-overflow-auto {
+.break-word {
+  word-wrap: break-word;
+}
+
+.overflow-auto {
   overflow: auto;
 }
