enhancement(builds): Adding commit messages to Vela build list (#181)
* adding commit message to vela build UI.

* fixing elm formatting

* fixing formatting error

* further attempt at fixing formatting error

* even further attempt at fixing formatting error

* even further attempt at fixing formatting error

* Adding requested fixes

* More requested fixes

* Adding a single slash. Per request.

* removing erroneous space

* updated Cypress tests to include new commit message field

* updated Cypress tests to include new commit message field

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -412,7 +412,6 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
   padding: 0 24px;
 }
 
@@ -441,6 +440,14 @@ nav {
 
 .git-info .sender {
   margin: 0 8px 0 8px;
+}
+
+.row .message {
+  font-size: 1rem;
+  width: 60%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .time-info {
